turtleart.lessons.turtleart.Main.Polygon6.scala.error
Source:9: error: missing arguments for method hexagone;
follow this method with `_' if you want to treat it as a partially applied function
		hexagone
                ^